# url-shortener

./: Cargo.toml  README.md  flake.nix
public/: web.html
src/: handlers.rs  main.rs  memory_database.rs  shortener.rs  url_manager.rs  util.rs
