[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
chrono = "0.4"
axum = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
